Fix reply dialog on smaller screens

--- a/css/main.css
+++ b/css/main.css
@@ -98,7 +98,8 @@ code {
 
 .messageText {
   height: 10rem;
-  width: 45rem;
+  width: 100%;
+  max-width: 45rem;
   padding: 5px;
 }
 
